@@ -25,15 +25,15 @@
  *   Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
  */
 
+#ifdef HAVE_CONFIG_H
+# include "config.h"
+#endif
+
 #include <glib.h>
 #include <glib/gstdio.h>
 #include <errno.h>
 #ifdef HAVE_LOCALE_H
 #include <locale.h>
-#endif
-
-#ifdef HAVE_CONFIG_H
-# include "config.h"
 #endif
 
 #include "apt-dater.h"
